codegen/tests/ui/func/no_url.stderr
error: metadata url not specified
 --> tests/ui/func/no_url.rs:7:1
  |
7 | #[get(aaa = "http://xxx")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)
